[package]
name = "vault-token-helper"
version = "0.1.0"
edition = "2021"
description = "A token helper for HashiCorp Vault."
repository = "https://github.com/vivienm/vault-token-helper"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
clap = { version = "4.5.7", default-features = false, features = ["derive", "env", "std"] }
dialoguer = { version = "0.11.0", default-features = false }
home = { version = "0.5.9", default-features = false }
refinery = { version = "0.8.14", default-features = false, features = ["rusqlite"] }
rusqlite = { version = "0.31.0", default-features = false }
thiserror = { version = "1.0.61", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt", "std"] }
unicode-properties = { version = "0.1.1", default-features = false, features = ["general-category"] }
xdg = { version = "2.5.2", default-features = false }
